--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -76,7 +76,7 @@
             display: block;
             width: 16px;
             height: 16px;
-            background: url("../img/icon/header/slide-out-panel/main/arr-right-aside-icon.png");
+            background: url("../../img/icon/header/slide-out-panel/main/arr-right-aside-icon.png");
             background-size: 16px;
           }
         }
