first content, ready to go

--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -200,6 +200,17 @@
     .current2 {
       background: url("../../img/bg/curent2.png");
     }
+    .desc {
+      padding-top: 7px;
+      font-size: 17px;
+      color: #b8c9ff;
+    }
+    .amount {
+      font-size: 28px;
+      font-weight: 600;
+      color: white;
+    }
+
   }
 
   .home-count-wrap {
