--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,3 +1,10 @@
+.header-section {
+  font-size: 40px;
+  color: #041843;
+  font-weight: 700;
+  margin-bottom: 100px;
+}
+
 .home-assets {
   transform: translateY(-115px);
   .container-color {
@@ -100,7 +107,8 @@
     margin-top: 27px;
     .input-wrap {
       background-color: #fff;
-      width: calc(50% - 12px);
+      margin-bottom: 30px;
+      //width: calc(50% - 12px);
       border-radius: 8px;
       header {
         color: white;
@@ -189,16 +197,17 @@
   .home-input-current {
     margin-top: 27px;
     .current {
-      width: calc(50% - 12px);
       height: 154px;
       box-shadow: 0 2px 6px 2px rgba(0, 0, 0, .06);
       border-radius: 8px;
       padding: 30px;
-
-      background: url("../../img/bg/curent1.png");
+      margin-bottom: 30px;
+      background: url("../../img/bg/curent1.png") no-repeat 50% 50%;
+      background-size: cover;
     }
     .current2 {
-      background: url("../../img/bg/curent2.png");
+      background: url("../../img/bg/curent2.png") no-repeat 50% 50%;
+      background-size: cover;
     }
     .desc {
       padding-top: 7px;
@@ -256,7 +265,9 @@
 
 .home-using {
   .item {
+    margin-bottom: 30px;
     .item-icon {
+      margin-bottom: 40px;
       width: 120px;
       height: 120px;
       background-repeat: no-repeat;
@@ -274,11 +285,20 @@
       background: url("../../img/icon/home-page/home-using/icon-3.png");
     }
   }
+  @media only screen and (max-width: 1200px) {
+    .item {
+      margin-bottom: 40px;
+      .item-icon {
+        margin-bottom: 20px;
+      }
+    }
+  }
 }
 
 
 .auditing-agency-section,
 .partner-section {
+  padding-top: 90px;
   .item {
     background-color: #fff;
     border-radius: 10px;
@@ -312,6 +332,9 @@
       }
     }
   }
+  @media only screen and (max-width: 1200px) {
+
+  }
 }
 
 .partner-section {
@@ -327,6 +350,7 @@
 }
 
 .details-section {
+  padding: 90px 0;
   .wrap {
     border-radius: 20px;
     padding: 45px 0;
