--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@
 //$body-color: #333;
 //$body-bg: #fff;
 //$border-radius: .4rem;
-//$secondary: #7f8faf;
+$secondary: #7f8faf;
 $dark: #48587b;
 $warning: #ffa62d;
 $success: #02c09f;
