--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -12,6 +12,10 @@
     background: linear-gradient( 180deg,#4e60a7,#9baece 14%,rgba(226,242,252,.73) 33%,rgba(231,239,252,.71));
     border-radius: 20px;
     padding: 50px;
+    @media only screen and (max-width: 768px) {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
   }
 
   .home-assets-amount {
@@ -30,6 +34,26 @@
     .amount-number {
       font-weight: 500;
       padding-right: 10px;
+    }
+    @media only screen and (max-width: 992px) {
+      .amount-number {
+        flex-basis: 100%;
+        text-align: center;
+      }
+    }
+    @media only screen and (max-width: 768px) {
+      .text, .amount-unit {
+        font-size: 20px;
+      }
+    }
+    @media only screen and (max-width: 450px){
+      .amount-icon {
+        width: 28px;
+        height: 24px;
+      }
+      .text, .amount-unit {
+        font-size: 16px;
+      }
     }
   }
 
@@ -99,6 +123,12 @@
         text-align: center;
         background-color: #000;
         border-radius: 4px;
+      }
+    }
+    @media only screen and (max-width: 1200px) {
+      flex-wrap: wrap;
+      .card-item {
+        width: 50%;
       }
     }
   }
@@ -331,9 +361,6 @@
         height: 51px;
       }
     }
-  }
-  @media only screen and (max-width: 1200px) {
-
   }
 }
 
