--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,8 +8,8 @@ $warning: #ffa62d;
 $success: #02c09f;
 
 $container-max-widths: (
-  sm: 540px,
-  md: 720px,
+  sm: 100%,
+  md: 100%,
   lg: 960px,
   xl: 1200px,
   //xxl: 1320px
