--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -13,11 +13,9 @@
     border-radius: 20px;
     padding: 50px;
     @media only screen and (max-width: 768px) {
-      padding-right: 20px;
-      padding-left: 20px;
+      padding: 15px 12px;
     }
   }
-
   .home-assets-amount {
     font-size: 32px;
     color: #fff;
@@ -47,12 +45,13 @@
       }
     }
     @media only screen and (max-width: 450px){
+      font-size: 20px;
       .amount-icon {
         width: 28px;
         height: 24px;
       }
       .text, .amount-unit {
-        font-size: 16px;
+        font-size: 14px;
       }
     }
   }
@@ -133,8 +132,7 @@
 
     .card-item {
       .tooltip-button {
-        display: flex;
-        align-items: center;
+        line-height: 12px;
         img {
           width: 12px;
           height: 12px;
@@ -169,6 +167,32 @@
       flex-wrap: wrap;
       .card-item {
         width: 50%;
+        margin-top: 12px;
+        .card-item-value {
+          line-height: 1;
+        }
+      }
+    }
+    @media only screen and (max-width: 768px) {
+      padding: 12px;
+      .card-item {
+        .card-item-value {
+          font-size: 18px;
+          .label-new-value {
+            font-size: 12px;
+          }
+          .count-down-number {
+            font-size: 12px;
+            width: 18px;
+            height: 18px;
+            line-height: 18px;
+          }
+        }
+      }
+    }
+    @media only screen and (max-width: 374px) {
+      .card-item {
+        width: 100%;
       }
     }
   }
@@ -262,6 +286,18 @@
       }
     }
 
+    @media only screen and (max-width: 768px) {
+      .operation,
+      .operation-ar {
+        display: none;
+      }
+      .ar,
+      .art {
+        text-align: right;
+      }
+
+    }
+
   }
 
   .home-input-current {
@@ -325,6 +361,12 @@
         }
       }
     }
+  }
+  @media only screen and (max-width: 992px) {
+    padding: 0 15px;
+  }
+  @media only screen and (max-width: 768px) {
+    transform: translateY(-45px);
   }
 }
 
