--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -4,6 +4,11 @@
     width: 80%
   }
 }
+@media (max-width: 450px) {
+  .modal-dialog.modal-dialog-slideout {
+    width: 90%
+  }
+}
 .modal-dialog-slideout {
   min-height: 100%;
   margin: 0 auto 0 0 ;
