--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,6 +7,10 @@ $dark: #48587b;
 $warning: #ffa62d;
 $success: #02c09f;
 
+$carousel-control-prev-icon-bg: url("../../img/icon/home-page/slider/slider-arrow-left.png");
+$carousel-control-next-icon-bg: url("../../img/icon/home-page/slider/slider-arrow-right.png");
+$carousel-control-icon-width: 16px;
+
 $container-max-widths: (
   sm: 100%,
   md: 100%,
@@ -14,3 +18,6 @@ $container-max-widths: (
   xl: 1200px,
   //xxl: 1320px
 ) !default;
+
+
+//http://localhost:3000/img/icon/home-page/home-assets/arrow-right.png
