add page liquidity

--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -82,6 +82,7 @@ $enable-shadows: true;
 @import "fonts";
 @import "vars";
 @import "homepage";
+@import "liquidity";
 @import "header";
 @import "dropd";
 @import "footer";
