--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -22,6 +22,12 @@ $dropdown-font-size: .875em !default;
 $dropdown-border-radius: 8px !default;
 
 
+//$table-cell-padding-y: 1.5rem !default;
+//$table-cell-padding-x: 1.5rem !default;
+$table-color: #041843 !default;
+$table-hover-bg: #f5f7fa !default;
+$table-border-color: #eee !default;
+$table-cell-vertical-align:  middle !default;
 
 $container-max-widths: (
   sm: 100%,
