--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -83,6 +83,7 @@ $enable-shadows: true;
 @import "vars";
 @import "homepage";
 @import "liquidity";
+@import "bridge";
 @import "header";
 @import "dropd";
 @import "footer";
