--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -35,6 +35,13 @@ $input-box-shadow: none !default;
 
 $btn-border-radius: 8px !default;
 
+$progress-height: 7px !default;
+$progress-bg: #e9edf3 !default;
+$progress-border-radius: 7px !default;
+$progress-box-shadow: none !default;
+
+$modal-content-border-radius: 10px !default;
+
 $container-max-widths: (
   sm: 100%,
   md: 100%,
@@ -44,4 +51,3 @@ $container-max-widths: (
 ) !default;
 
 
-//http://localhost:3000/img/icon/home-page/home-assets/arrow-right.png
