js show dropdown

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,6 +21,8 @@ $dropdown-link-active-bg: transparent;
 $dropdown-font-size: .875em !default;
 $dropdown-border-radius: 8px !default;
 
+$dropdown-border-color: transparent !default;
+
 $table-color: #041843 !default;
 $table-hover-bg: #f5f7fa !default;
 $table-border-color: #eee !default;
