--- a/scss/_bridge.scss
+++ b/scss/_bridge.scss
@@ -58,6 +58,7 @@
 
 .bet-info {
   width: 100%;
+  position: relative;
 
   .bet-selete {
     height: 60px;
@@ -214,5 +215,51 @@
     display: inline-block;
     margin-left: 2px;
     color: #181f36;
+  }
+}
+
+
+.bet-hide {
+  .assets-body {
+    padding: 37px 13px 13px 13px;
+    width: 240px;
+    .close-icon {
+      position: absolute;
+      right: 18px;
+      top: 18px;
+      width: 18px;
+      cursor: pointer;
+    }
+
+  }
+}
+
+
+.list {
+  font-weight: 500;
+  margin-bottom: 10px;
+  height: 44px;
+  border-bottom: 1px solid #e6e6e6;
+  padding: 0 13px;
+  &:hover {
+    background: #f6f7fb;
+    border-radius: 18px;
+  }
+  .start {
+
+    .bet-icon {
+
+      margin-right: 10px;
+    }
+  }
+  img {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+  }
+  .span-img {
+    display: inline-block;
+    width: 30px;
+    text-align: right;
   }
 }
