--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -514,7 +514,7 @@
 
 //all pages
 .banner-bar {
-  padding: 100px 0;
+  padding: 100px 0 150px;
   background: url("../../img/liquidity-page/banner-bg.png") 50% 50% no-repeat;
   background-size: cover;
   .banner-title {
