--- a/scss/_bridge.scss
+++ b/scss/_bridge.scss
@@ -21,6 +21,7 @@
 
 .wind-mining-content {
   width: 415px;
+  min-height: 550px;
   padding: 20px;
   margin: -100px auto 0;
   font-size: 12px;
@@ -124,7 +125,6 @@
     outline: none;
     box-shadow: 0 9px 10px 0 rgba(1, 207, 170, .2);
   }
-
   .available {
     height: 17px;
     font-size: 12px;
@@ -206,6 +206,9 @@
     margin-bottom: 5px;
     line-height: 17px;
     color: #626e88;
+    b {
+      color: red;
+    }
     img {
       float: left;
       width: 12px;
@@ -245,6 +248,31 @@
     font-weight: 500;
     text-decoration: underline;
     cursor: pointer;
+  }
+  .title-section {
+    font-size: 16px;
+    font-weight: 600;
+    color: #171717;
+    img:first-child {
+      width: 26px;
+      height: 26px;
+    }
+  }
+  .not-history {
+    min-height: 500px;
+    width: 100%;
+    font-size: 12px;
+    font-weight: 500;
+    color: #7f8faf;
+    img {
+      height: 61px;
+      width: 67px;
+    }
+  }
+  .historyContainer {
+    max-height: 550px;
+    overflow-y: scroll;
+    padding: 10px;
   }
 }
 
