add page priceplan

--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -84,6 +84,7 @@ $enable-shadows: true;
 @import "homepage";
 @import "liquidity";
 @import "bridge";
+@import "priceplan";
 @import "header";
 @import "dropd";
 @import "footer";
