--- a/scss/_bridge.scss
+++ b/scss/_bridge.scss
@@ -21,6 +21,7 @@
 
 .wind-mining-content {
   width: 415px;
+  max-width: 100%;
   min-height: 550px;
   padding: 20px;
   margin: -100px auto 0;
@@ -160,7 +161,7 @@
         width: 100%;
         height: 50px;
         background: #f1f3f7;
-        margin-left: 12px;
+        //margin-left: 12px;
         font-size: 14px;
         font-weight: 500;
         border: none;
@@ -230,9 +231,10 @@
     font-size: 18px;
   }
   .quota-name {
-    margin-top: 5px;
     padding-top: 5px;
     height: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     font-size: 12px;
     cursor: pointer;
     img {
@@ -273,6 +275,12 @@
     max-height: 550px;
     overflow-y: scroll;
     padding: 10px;
+  }
+  @media only screen and (max-width: 350px) {
+    padding: 14px;
+    .assets-item .assets-input input {
+      font-size: 12px;
+    }
   }
 }
 
